Corrección de errores

--- a/deploy.conf
+++ b/deploy.conf
@@ -5,7 +5,7 @@
 NAME='equipo'
 
 # Número de instancias a desplegar
-NUM=23
+NUM=5
 
 # UUID de la imagen a utilizar
 IMAGE_ID='71d5a68c-3e72-402e-a3d7-ee9440849ecf'
@@ -21,7 +21,7 @@ FLAVOR='m1.small'
 SECURITY_GROUPS='default'
 
 # Nombre de la red en la que se desplegarán las instancias
-NET_NAME=`int-net`
+NET_NAME='int-net'
 
 
 # Archivo de salida con la lista de instancias desplegadas
